--- a/index.html
+++ b/index.html
@@ -39,6 +39,25 @@
 <body>
 
     <header class="header">
+        <div class="nav-bar__mob">
+            <img src="assets/images/icons/logo-mob.svg" alt="">
+            <a href="tel:+7 962 445 33 04">
+                <img src="assets/images/icons/tel-mob.svg" alt="">
+            </a>
+            <div class="hamburger-menu">
+                <input id="menu__toggle" type="checkbox" />
+                <label class="menu__btn" for="menu__toggle">
+                    <span></span>
+                </label>
+                <ul class="menu__box">
+                    <li><a class="menu__item" href="#">Наши курсы</a></li>
+                    <li><a class="menu__item" href="#">Наши преподаватели</a></li>
+                    <li><a class="menu__item" href="#">Отзывы</a></li>
+                    <li><a class="menu__item" href="#">Оставить заявку</a></li>
+                    <li><a class="menu__item" href="#">Наши контакты</a></li>
+                </ul>
+            </div>
+        </div>
         <div class="container">
             <nav class="nav-bar">
                 <a href="#" class="logo">
@@ -57,19 +76,8 @@
                     </a>
                 </div>
             </nav>
-            <div class="hamburger-menu">
-                <input id="menu__toggle" type="checkbox" />
-                <label class="menu__btn" for="menu__toggle">
-                    <span></span>
-                </label>
-                <ul class="menu__box">
-                    <li><a class="menu__item" href="#">Наши курсы</a></li>
-                    <li><a class="menu__item" href="#">Наши преподаватели</a></li>
-                    <li><a class="menu__item" href="#">Отзывы</a></li>
-                    <li><a class="menu__item" href="#">Оставить заявку</a></li>
-                    <li><a class="menu__item" href="#">Наши контакты</a></li>
-                </ul>
-            </div>
+
+
             <div class="wrapper">
                 <div class="wrapper-text">
                     <h1>В нашей школе ваш ребенок научится</h1>
@@ -86,6 +94,7 @@
                 <a class="wrapper-mob-link" href="#form">ЗАПИСАТЬСЯ НА БЕСПЛАТНЫЙ УРОК <img src="assets/images/icons/link-line.svg" alt=""></a>
             </div>
         </div>
+
     </header>
 
 
@@ -216,7 +225,7 @@
                     </div>
                     <div class="advantage-card">
                         <img src="assets/images/adcard4.png" alt="">
-                        <h3>РСОВЕРШЕНСТВУЮТ ПАМЯТЬ</h3>
+                        <h3>СОВЕРШЕНСТВУЮТ ПАМЯТЬ</h3>
                     </div>
                 </div>
             </div>
@@ -1300,7 +1309,7 @@
                 </div>
             </div>
             <div class="swiper teacher-mob">
-                <h2>Наши преподаватели</h2>
+                <h2>Наши <br> преподаватели</h2>
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
                         <div class="teacher-mob__card card-1">
@@ -1531,7 +1540,7 @@
             <h3>НАШИ КОНТАКТЫ</h3>
             <div class="form-item">
                 <img src="assets/images/cont-loc.svg" alt="">
-                <a href="https://goo.gl/maps/oFAsuEntgLm1Sweu9"> г. Ставрополь, ул. Краснофлотская, 66 </a>
+                <a href="https://goo.gl/maps/oFAsuEntgLm1Sweu9"> г. Ставрополь, <br> ул. Краснофлотская, 66 </a>
             </div>
             <div class="form-item">
                 <img src="assets/images/cont-tel.svg" alt="">
