--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <!-- Required meta tags -->
+    <meta name="wb:op" content="30ca4489bfd1febf1bbb983414778edd"/>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, shrink-to-fit=no">
